--- a/README.rdoc
+++ b/README.rdoc
@@ -33,8 +33,9 @@ Please feel free to use a different markup language if you do not plan to run
 
 "As a [role], I want [feature], so that [benefit]."
 
-* As a user I want to be able to create an account, so that I can log in
-* As a user I want to be able to visit my profile page, so that I can edit my profile
+* As a user I want to be able to create an account, so that I can log in (done)
+* As a user I want to be able to log in, so that I can do things (done)
+* As a user I want to be able to visit my profile page, so that I can edit my profile (done)
 * As a user I want to be able to post a listing, so that I can invite people to stay at my place
 * As a user I want to be able to visit a listing page, so that I can see more details
 * As a user I want to be able to search listings, so that I can find a place to stay
